# undetectable-mechanical-aimbot

./: .gitignore  CMakeLists.txt  config.json
Tests/: Klipper_socket_test.py
src/: config.cpp  config.hpp  gcodesender.cpp  gcodesender.hpp  main.cpp  pid.cpp  pid.hpp  processing.cpp  processing.hpp  udp_streamer.cpp  udp_streamer.hpp
utils/: camera_tool.cpp  save_frame.cpp
